# minifish

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  evaluate.cpp  evaluate.h  function.h  history.cpp  history.h  main.cpp  move_generator.cpp  move_generator.h  move_picker.cpp  move_picker.h  position.cpp  position.h  search.cpp  search.h  structures.cpp  structures.h  transposition_table.cpp  transposition_table.h  types.h  zobrist.h
test/: CMakeLists.txt  main.cpp  robot_battle.txt  robot_battle_1729653504763.txt  robot_battle_1729666476581.txt  robot_battle_1729759105954.txt  robot_battle_1730124987011.txt  robot_battle_1730130702948.txt  robot_battle_1730422269049.txt
